answered all questions

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Week 4 Assignment</title>
-    <!-- Create and link a CSS file! -->
-  </head>
-  <body>
+    <link rel="stylesheet" href="style.css">
+    <Header>
     <h1>Week 4 Assignment - Part 2</h1>
     <p>Check console for errors.</p>
+    </Header>
+  </head>
+  <body>
+    <div class="info">
+      <h2>My name is Andrew Leck</h2>
+    </div>
+    <img src=" https://s.aolcdn.com/dims-global/dims3/GLOB/resize/708x398/quality/60/https://s.aolcdn.com/commerce/autodata/images/USD10MBS961A022000.jpg ">
+  <h3> I drive a car for my main transportation</h3>
   </body>
 </html>
