--- a/assignment/index.html
+++ b/assignment/index.html
@@ -13,7 +13,7 @@
     <div class="info">
       <h2>My name is Andrew Leck</h2>
     </div>
-    <img src=" https://s.aolcdn.com/dims-global/dims3/GLOB/resize/708x398/quality/60/https://s.aolcdn.com/commerce/autodata/images/USD10MBS961A022000.jpg ">
+    <img src=" https://s.aolcdn.com/dims-global/dims3/GLOB/resize/708x398/quality/60/https://s.aolcdn.com/commerce/autodata/images/USD10MBS961A022000.jpg " alt="Car">
   <h3> I drive a car for my main transportation</h3>
   </body>
 </html>
